fix: faulty topbar alignments

--- a/src/assets/layout/_topbar.scss
+++ b/src/assets/layout/_topbar.scss
@@ -21,7 +21,7 @@
     color: var(--surface-900);
     font-size: 1.5rem;
     font-weight: 500;
-    width: 300px;
+    width: 120px;
     border-radius: 12px;
 
     img {
@@ -63,28 +63,15 @@
       font-size: 1rem;
       display: none;
     }
-  }
 
-  .layout-menu-button {
-    margin-left: 2rem;
-  }
-
-  .layout-topbar-menu-button {
-    display: none;
-
-    i {
-      font-size: 1.25rem;
+    &.left {
+      order: 0;
     }
-  }
 
-  .layout-topbar-menu {
-    margin: 0 0 0 auto;
-    padding: 0;
-    list-style: none;
-    display: flex;
-
-    .layout-topbar-button {
-      margin-left: 1rem;
+    &.right {
+      margin-left: auto;
+      margin-right: 0;
+      order: 2;
     }
   }
 }
@@ -95,61 +82,21 @@
 
     .layout-topbar-logo {
       width: auto;
-      order: 2;
-    }
-
-    .layout-menu-button {
-      margin-left: 0;
       order: 1;
     }
+  }
 
-    .layout-topbar-menu-button {
-      display: inline-flex;
+  .layout-topbar-button {
+    &.left {
+      margin-right: auto;
       margin-left: 0;
-      order: 3;
+      order: 0;
     }
 
-    .layout-topbar-menu {
-      margin-left: 0;
-      position: absolute;
-      flex-direction: column;
-      background-color: var(--surface-overlay);
-      box-shadow:
-        0px 3px 5px rgba(0, 0, 0, 0.02),
-        0px 0px 2px rgba(0, 0, 0, 0.05),
-        0px 1px 4px rgba(0, 0, 0, 0.08);
-      border-radius: 12px;
-      padding: 1rem;
-      right: 2rem;
-      top: 5rem;
-      min-width: 15rem;
-      display: none;
-      -webkit-animation: scalein 0.15s linear;
-      animation: scalein 0.15s linear;
-
-      &.layout-topbar-menu-mobile-active {
-        display: block;
-      }
-
-      .layout-topbar-button {
-        margin-left: 0;
-        display: flex;
-        width: 100%;
-        height: auto;
-        justify-content: flex-start;
-        border-radius: 12px;
-        padding: 1rem;
-
-        i {
-          font-size: 1rem;
-          margin-right: 0.5rem;
-        }
-
-        span {
-          font-weight: medium;
-          display: block;
-        }
-      }
+    &.right {
+      margin-left: auto;
+      margin-right: 0;
+      order: 2;
     }
   }
 }
